5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4376/executions/1577_1560.log
== TEST (2019-03-21 18:38:50) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.",lower())
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.",lower())
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:39:00) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:03) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower)
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower)
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:36) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower)()
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower)()
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:40:48) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:41:07) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- ERROR:
File "XXXX", line 2
    print(string"Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
                                                                                          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:42:10) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra." .lower())
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra." .lower())
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:42:19) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower())
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower())
                                                                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:42:26) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower()
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower()
                                                                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:42:36) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower)
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower)
                                                                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:42:48) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower()
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower()
                                                                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:42:53) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower())
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower())
                                                                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:43:04) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower")
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower")
                                                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:43:11) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower)
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower)
                                                                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:43:19) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower
                                                                                                ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:43:29) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower()
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower()
                                                                                                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:45:28) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower")
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower")
                                                                                                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:46:01) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower")
-- ERROR:
File "XXXX", line 1
    string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.
                                                                                      ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:46:10) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower)
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra..lower)
                                                                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:16:24) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower)
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower)
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:16:35) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:18:04) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:18:19) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower()
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower()
                                                                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:18:27) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower
                                                                                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:18:48) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:19:02) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower()
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower()
                                                                                                   ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:19:09) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string.Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower()
-- ERROR:
File "XXXX", line 2
    print(string.Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.).lower()
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:20:13) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
-- ERROR:
File "XXXX", line 2
    print(string."Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
                                                                                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:21:32) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
AttributeError: 'NoneType' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 19:21:38) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
AttributeError: 'NoneType' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:19:02) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 2, in <module>
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
AttributeError: 'NoneType' object has no attribute 'lower'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:19:08) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
-- EXECUTION TIME:
0.141699
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1577/1560/main.py", line 2, in <module>
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower()
AttributeError: 'NoneType' object has no attribute 'lower'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:19:15) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower())
-- ERROR:
File "XXXX", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower())
                                                                                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:19:15) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower())
-- EXECUTION TIME:
0.139313
-- ERROR:
  File "/home/codebench/codes/1577/1560/main.py", line 2
    print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.").lower())
                                                                                              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:19:25) 
-- CODE:
string = "Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra."
print("Augusta Ada Byron, a Condessa de Lovelace, nasceu em 1815, na Inglaterra.".lower())
-- EXECUTION TIME:
0.207131
-- TEST CASE 1:
---- input:
nonono
---- correct output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
---- user output:
augusta ada byron, a condessa de lovelace, nasceu em 1815, na inglaterra.
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
